# stinger-ipc

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CLAUDE.md  LICENSE  README.md  Taskfile.yml  clang-format-config.yaml  handler.rs.jinja2  mypy.ini  pyproject.toml  python_generator.py  requirements-dev.txt  requirements.txt  schema.yaml
example_interfaces/full/output/cpp/: CMakeLists.txt
example_interfaces/full/output/cpp/cmake/: Full-config-version.cmake  Full-config.cmake.in  Full-config.cmake.in.txt
example_interfaces/full/output/cpp/examples/: client_main.cpp  discovery_example.cpp  server_main.cpp
example_interfaces/full/output/cpp/include/: broker.hpp  client.hpp  conversions.hpp  discovery.hpp  enums.hpp  ibrokerconnection.hpp  interface_exceptions.hpp  method_payloads.hpp  property_structs.hpp  return_types.hpp  server.hpp  signal_payloads.hpp  structs.hpp  utils.hpp
example_interfaces/full/output/cpp/src/: broker.cpp  client.cpp  conversions.cpp  discovery.cpp  method_payloads.cpp  property_structs.cpp  server.cpp  signal_payloads.cpp  structs.cpp
example_interfaces/full/output/python/: client.py  connection.py  interface_enums.py  interface_types.py  method_codes.py  pyproject.toml  run_tui.py  server.py
example_interfaces/full/output/python/example/: client.py  connection.py  interface_types.py  method_codes.py  server.py
example_interfaces/full/output/python/examples/: client_demo.py  client_demo_classes.py  server_demo.py
example_interfaces/full/output/python/full/: client.py  connection.py  interface_types.py  server.py
example_interfaces/full/output/python/fullipc/: client.py  connection.py  interface_types.py  method_codes.py  server.py
example_interfaces/full/output/python/tests/: test_client.py  test_server.py
example_interfaces/full/output/rust/: Cargo.toml  README.md
example_interfaces/full/output/rust/client/: Cargo.toml
example_interfaces/full/output/rust/connection/: Cargo.toml
example_interfaces/full/output/rust/examples/: client_demo.rs  pub_and_recv.rs  server_demo.rs
example_interfaces/full/output/rust/payloads/: Cargo.toml
example_interfaces/full/output/rust/server/: Cargo.toml
example_interfaces/full/output/rust/src/: client.rs  discovery.rs  interface.rs  interface.rs.jinja  lib.rs  message.rs  payloads.rs  property.rs  server.rs
example_interfaces/signal_only/output/cpp/: CMakeLists.txt
example_interfaces/signal_only/output/cpp/cmake/: SignalOnly-config.cmake.in
example_interfaces/signal_only/output/cpp/examples/: client_main.cpp  discovery_example.cpp  discovery_publisher.cpp  server_main.cpp
example_interfaces/signal_only/output/cpp/include/: broker.hpp  client.hpp  conversions.hpp  discovery.hpp  enums.hpp  ibrokerconnection.hpp  interface_exceptions.hpp  method_payloads.hpp  property_structs.hpp  return_types.hpp  server.hpp  signal_payloads.hpp  structs.hpp
example_interfaces/signal_only/output/cpp/src/: broker.cpp  client.cpp  conversions.cpp  discovery.cpp  interface_exceptions.cpp  method_payloads.cpp  property_structs.cpp  server.cpp  signal_payloads.cpp  structs.cpp
example_interfaces/signal_only/output/python/: client.py  connection.py  interface_types.py  method_codes.py  pyproject.toml  requirements.txt  run_tui.py  server.py
example_interfaces/signal_only/output/python-alt1/: pyproject.toml
example_interfaces/signal_only/output/python-alt1/examples/: client_demo.py  client_demo_classes.py  server_demo.py
example_interfaces/signal_only/output/python-alt1/tests/: test_client.py  test_server.py
example_interfaces/signal_only/output/python/examples/: client_demo.py  client_demo_classes.py  server_demo.py
example_interfaces/signal_only/output/python/signalonly/: client.py  connection.py  interface_types.py  method_codes.py  server.py
example_interfaces/signal_only/output/python/signalonlyipc/: client.py  connection.py  interface_types.py  server.py
example_interfaces/signal_only/output/python/tests/: test_client.py  test_server.py
example_interfaces/signal_only/output/rust/payloads/: Cargo.toml
example_interfaces/simple/output-alternate/python/: pyproject.toml
example_interfaces/simple/output-alternate/python/examples/: client_demo.py  client_demo_classes.py  server_demo.py
example_interfaces/simple/output-alternate/python/tests/: test_client.py  test_server.py
example_interfaces/simple/output/cpp/: CMakeLists.txt
example_interfaces/simple/output/cpp/cmake/: CMakeCache.txt  Makefile  Simple-config.cmake  Simple-config.cmake.in  Simple-targets.cmake  cmake_install.cmake
example_interfaces/simple/output/cpp/examples/: client_main.cpp  discovery_example.cpp  server_main.cpp
example_interfaces/simple/output/cpp/include/: broker.hpp  client.hpp  conversions.hpp  discovery.hpp  enums.hpp  ibrokerconnection.hpp  interface_exceptions.hpp  method_payloads.hpp  property_structs.hpp  server.hpp  signal_payloads.hpp  structs.hpp
example_interfaces/simple/output/cpp/src/: client.cpp  conversions.cpp  discovery.cpp  method_payloads.cpp  property_structs.cpp  server.cpp  signal_payloads.cpp  structs.cpp
example_interfaces/testable/output/cpp/: CMakeLists.txt
example_interfaces/testable/output/cpp/cmake/: TestAble-config.cmake.in  Testable-config.cmake.in
example_interfaces/testable/output/cpp/examples/: client_main.cpp  discovery_example.cpp  server_main.cpp
example_interfaces/testable/output/cpp/include/: broker.hpp  client.hpp  conversions.hpp  enums.hpp  (+8 more)
example_interfaces/testable/output/python/: pyproject.toml  run_tui.py  {%if not config.python.python37%}run_tui.py.jinja2{%endif%}
example_interfaces/testable/output/python-alt1/: pyproject.toml  run_tui.py
example_interfaces/testable/output/python37/: pyproject.toml
example_interfaces/testable/output/rust/: Cargo.toml  README.md
example_interfaces/weather/output-alternate/python/: pyproject.toml
example_interfaces/weather/output/cpp/: CMakeLists.txt
example_interfaces/weather/output/python/: connection.py  interface_types.py  pyproject.toml  run_tui.py
stingeripc/templates/rust/connection/: Cargo.toml
(+802 files in other folders)
