[project]
name = "stinger-ipc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jacobs-jinja-too>=0.1.0",
    "packaging>=25.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.14",
    "stringcase>=1.2.0",
    "yamlloader>=1.5.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jacobs-json-schema>=0.4.2",
    "mypy>=1.16.0",
    "paho-mqtt>=2.1.0",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "types-paho-mqtt>=1.6.0.20240321",
]

[tool.black]
line-length = 200
