[project]
name = "full-ipc"
version = "0.0.2"
description = "Example Interface"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.7",
    "paho-mqtt>=2.0.1",
    "isodate>=0.7.2",
]

[project.optional-dependencies]
tui = ["textual"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
full-tui = "fullipc.tui.app:main"

[tool.setuptools.package-data]
packages = ["fullipc"]