[project]
name = "full-ipc"
version = "0.0.2"
description = "Example Interface"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.7",
    "paho-mqtt>=2.1.0",
    "isodate>=0.7.2",
    "pyqttier>=0.1.1",
]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



[tool.setuptools.package-data]
packages = ["fullipc"]